--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -12,6 +12,8 @@ html {
 .application {
     min-height: 100vh;
     min-width: 100vw;
+    display: flex;
+    flex-direction: column;
 }
 
 .application, a, button, input, textarea {
@@ -88,7 +90,7 @@ html {
 .footer_segment {
     max-width: 750px;
     width: 65%;
-    margin: 1rem 6rem 2rem 6rem;
+    margin: 1rem 6rem 1rem 6rem;
     height: .5px;
     border-right: .2rem;
 }
@@ -120,9 +122,9 @@ svg path {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 0 2rem;
 }
 .main_content_home_title {
+    font-weight: 600;
     font-size: 4vw;
     margin: 1rem;
 }
@@ -147,16 +149,15 @@ svg path {
     }
 }
 .home_navigation {
-    margin: 1rem 0 0 0;
+    margin-top: 4rem;
     font-size: 1rem;
     display: flex;
     justify-content: center;
 }
 .home_link {
-    margin: 0 .5rem;
+    margin: 0 1rem;
     text-decoration: none;
     text-transform: capitalize;
-    font-style: italic;
     transition: .2s;
 }
 @media (max-width: 650px) {
@@ -170,7 +171,6 @@ svg path {
         min-height: 1.2rem;
     }
     .home_navigation {
-        font-size: .7rem;
         display: flex;
         justify-content: center;
     }
@@ -184,9 +184,11 @@ svg path {
 
 /* ABOUT */
 .main_content_about_title {
+    font-weight: 600;
+    width: 70%;
     font-size: 4vw;
-    margin: 1rem;
-    margin-top: 4rem;
+    margin-top: 3rem;
+    margin-left: 2rem;
 }
 .main_content_about_block_text {
     width: 70%;
@@ -200,7 +202,7 @@ svg path {
     word-spacing: -.2rem;
 }
 @media (max-width: 1100px) {
-    .main_content_about_block_text {
+    .main_content_about_block_text, .main_content_about_title {
         width: 80%;
     }
 }
@@ -208,8 +210,13 @@ svg path {
     .main_content_about_title {
         font-size: 2rem;
     }
-    .main_content_about_block_text {
+    .main_content_about_block_text, .main_content_about_title {
         width: 95%;
+    }
+}
+@media (max-width: 450px) {
+    .main_content_about_title {
+        margin-top: 5rem;
     }
 }
 @media screen and (min-width: 1400px) {
