--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -167,7 +167,7 @@ html {
         font-size: 1.5rem;
     }
     #wordSwitcher {
-        min-height: 1.2rem;
+        min-height: 1.5rem;
     }
     .home_navigation {
         display: flex;
@@ -201,32 +201,6 @@ html {
     text-align: left;
     word-spacing: -.2rem;
 }
-@media (max-width: 1100px) {
-    .main_content_about_block_text, .main_content_about_title {
-        width: 80%;
-    }
-    .main_content_about_title {
-        margin-top: 3rem;
-    }
-}
-@media (max-width: 650px) {
-    .main_content_about_title, .main_content_block_works_title {
-        font-size: 2rem;
-    }
-    .main_content_about_block_text, .main_content_about_title {
-        width: 80%;
-    }
-}
-@media (max-width: 450px) {
-    .main_content_about_title, .main_content_block_works_title {
-        margin-top: 5rem;
-    }
-}
-@media screen and (min-width: 1400px) {
-    .main_content_about_title, .main_content_block_works_title {
-       font-size: 3.5rem;
-    }
-}
 /* ABOUT */
 
 /* WORK */
@@ -240,6 +214,11 @@ html {
     margin-bottom: 2rem;
     width: 80%;
     max-width: 1000px;
+}
+
+.wordingAnimation_realisations {
+    display: flex;
+    flex-wrap: nowrap;
 }
 
 .main_content_works_card_displayer {
@@ -344,3 +323,42 @@ html {
 }
 
 /* WORK */
+
+/* DISPLAY DES TITRES */
+.main_content_home_title, .main_content_block_works_title, .main_content_about_title {
+    display: flex;
+    flex-wrap: wrap;
+}
+.main_content_home_title span, .main_content_block_works_title span, .main_content_about_title span {
+
+}
+/* DISPLAY DES TITRES */
+
+/* MEDIA QUERY TITLES & ABOUT TEXT */
+@media (max-width: 1100px) {
+    .main_content_about_block_text, .main_content_about_title {
+        width: 80%;
+    }
+    .main_content_about_title {
+        margin-top: 3rem;
+    }
+}
+@media (max-width: 650px) {
+    .main_content_about_title, .main_content_block_works_title {
+        font-size: 2rem;
+    }
+    .main_content_about_block_text, .main_content_about_title {
+        width: 80%;
+    }
+}
+@media (max-width: 450px) {
+    .main_content_about_title, .main_content_block_works_title {
+        margin-top: 5rem;
+    }
+}
+@media screen and (min-width: 1400px) {
+    .main_content_about_title, .main_content_block_works_title {
+       font-size: 3.5rem;
+    }
+}
+/* MEDIA QUERY TITLES */
