--- a/src/assets/css/menuMobile.css
+++ b/src/assets/css/menuMobile.css
@@ -105,8 +105,8 @@
 }
 .burger_menu_openner {
     position: fixed;
-    top: .5rem;
-    left: 1rem;
+    bottom: .5rem;
+    right: 1rem;
     z-index: 1000;
 }
 *,*::before,*:after{box-sizing: border-box}
